<resources>
    <string name="app_name">LJC</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="project_name">Project Title</string>
    <string name="project_description">Project Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_testimonial">Add testimonial:</string>
    <string name="client_quote">Client\'s quote...</string>
    <string name="client_name">Client\'s full name...</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="project_title">Project Title:</string>
    <string name="project_details">Details:</string>
    <string name="user_guide">User Guide:</string>
    <string name="guide_description">LJC Construction Mobile administrator guide: \n\n
Note: The following instructions were produced whilst using a Nexus 5X using the latest API (Version 25). Your interface may vary from my UI descriptions, depending on both your API version and phone model (was built to be responsive to 73% of all android devices).
\n\n1. Login:\n\n
Only the designated administrator will be able to access this application. Gmail has been used due to it being the clients preferred method of verification (offers additional security measures as it’s an established service provider).
To login, the user will need to select the “GMail” button at the bottom of the login page, which will re-direct them to Google’s login service, where a user can either sign-up or login with an available Gmail account. Note: Only users specified by the product owner will be granted access to the application.
\n\n2. Tabular/Default layout:\n\n
After successfully signing in, the user will be presented with a tabular view, displaying “New Build” projects by default. There is a search bar located at the bottom of the page, which can be used to filter results. On the left of the search view is a logout button; and on the right, a search icon. The tabular buttons at the top of the screen allow the user to navigate between “Construction Projects” and “Testimonials”.
\n\n3. Logging out:\n\n
A logout button (located to the left of the Search View) persists across the tabular views, allowing the user to logout at any point (excluding when adding Projects, which has a dedicated activity). By selecting the icon, the user will be re-directed to the login page, where they will be prompted for their credentials when next accessing the application. Logging out will disable the auto-sign in feature, but this will be re-activated upon signing in. Note: If you allow Google accounts to be stored on your phone, you won’t be prompted for your password if the administrator has signed in before.
\n\n4. Filtering Construction Projects:\n\n
Three image buttons exist below the navigational tabs located at the top of the screen. These represent the following project types in order; “New Builds”, “Extensions” and “Refurbishments”. These project types are mutually exclusive, so you will need to select a project type to locate a specific project. Once you’ve filtered by project type, you can continue to filter projects by their “Title” (caption placed on a projects image both on the website and mobile) using the text search located at the bottom of the screen.
 Note: This is a substring search, meaning if you type “S”, all projects that begin with “S” will be returned. It’s also important to note that any additional characters are case-sensitive.  After selecting the search icon, a progress dialog will appear notifying you that your request is being processed. When the dialog disappears, projects matching your filter should be visible.
The returned entries are presented to the user with both their display image and project caption, allowing you to discern between various projects.
\n\n5. Add a new Project:\n\n
To add a project, you must select the blue floating action button located in the bottom right of the page (displaying a “+” symbol). After doing so, a new view will appear, on which the following on-screen components will be visible; the three project type icons, project title field, project description field, project image button, cancel button and confirm button.
The project type is selected by tapping one of the three icons, which once selected, will appear blue to confirm your selection. The type can be changed at any point during a projects creation, but re-selecting a project type will not un-check it (compulsory field).
The value entered for the project’s title (located below the project type selection) will be used as a caption for the project (both on the app and website). The project title’s length must be within the accepted range (3 – 30 characters). After selecting the enter button on the soft keyboard, you will automatically be located to the “Details” field. This has similar constraints to the previous field, but the character length has been lengthened to 3000 characters. The contents of the project title and description are open to the user’s interpretation, I would suggest staying consistent with the format however.
To add a project image, the user must select the photo icon below the text fields. After doing so, the user will be prompted to either select a photo from their downloads or camera folder. Once a folder has been selected, you simply click the image which is associated with the new project. Note: The website’s image dimensions aren’t stretched (responsive container) allowing images of no-specific dimension to be used. However, I recommend using images with an aspect ratio of 16:9, with recommend dimensions of 960 x 360 pixels. The image will appear in the frame previously populated by the camera icon. The image can be changed again by simply selecting the current image.
Finally, to confirm the project’s creation, select the green button with the “Tick” icon. This will open a pop-up requesting that you verify the projects creation. Once the project is successfully created, you will be navigated back to the tabular view. Selecting the red cancel button at the bottom of the screen will cancel the project creation process, again, relocating you back to the tabular view. Note: If any fields are incomplete (don’t conform to the format requisites), an error message will appear, alerting you to a field’s requirement.
\n\n6. Updating an existing Project:\n\n
To update a project, the user must first locate it in the list view whilst on the projects tab. Once located, you will need to select the blue pencil icon in the top right corner of the project cell; doing so will relocate the user to the “Add project” view. Once the view is loaded, you will notice that all fields (including the image) have been populated with the selected projects details. Simply change the details you wish to alter, then select the confirmation button at the bottom of the screen. After confirming your changes, you will be sent to the tabular view, where the updated project will be visible.
\n\n7. Deleting a Project:\n\n
Like updating a project, you must first locate the project using the available filtering options to remove it. Once you have found the project, you will need to select the red removal button located in the top right of the list items cell (on the right of the pencil icon). After selecting the removal icon, a pop-up will appear, requesting your confirmation of the projects removal (simply select the cancel button if this was a mistake). After confirming its removal, the project will be removed from the list view and a text message will appear confirming that project was successfully deleted.
\n\n8. Filtering Testimonials:\n\n
Unlike the “Projects” tab, you don’t have to filter the object type before using the search tool at the bottom of the page. The list view is organised alphabetically (ordered by the client’s name), but you can perform a substring search to remove any unwanted results. Note: Because it’s a substring search, a client’s title will also need to be considered (the application requests the clients full name), e.g. a testimonial by Mr Johnson will not be returned if you simply search “John” (“Mr John” would however).
\n\n9. Adding a Testimonial:\n\n
To add a testimonial, you will need to select the blue floating action button in the bottom right corner (like when adding a project). Doing so will display an alert dialogue box, requesting the clients full name and quote to be entered. The clients name must be between 3 – 30 characters in length, and their quote should be between 10 – 1000 characters in length. If these conditions aren’t met, selecting the confirmation button will result in a message appearing, alerting you to the fields which don’t meet the necessary requirements.
Selecting the cancel button will simply close the alert dialogue box (also clears its values), re-enabling the testimonials list view.  Assuming the clients name and testimonial are correctly formatted, selecting the “Add” button will result in a second dialogue box appearing, requesting the user’s confirmation of the testimonial’s creation. Once done, the alert dialogue will be closed, and the new testimonial will be visible in the list view (a text message will appear informing you of the testimonials successful creation).
\n\n10. Updating an existing Testimonial:\n\n
Updating a testimonial requires that the user first locates the testimonial they wish to update (can use available filtering options if you wish). Once the testimonial has been located, you will need to select the blue pencil icon in the top right of the list item’s cell (consistent with project tab). This will open the “Add Testimonial” pop-up, but the text fields will be populated by the selected testimonials contents.
These details can be altered and confirmed similarly to how testimonials are created. Again, the values must be within the specified character range for the testimonial to be successfully updated. After confirming that you want to update a testimonial with the provided details, the list view will again become visible, with the updated testimonial present. A message will appear alerting you to the testimonials successful update.
\n\n11. Removing a Testimonial:\n\n
To remove a testimonial, you will again need to locate the testimonial via either scrolling through the list view, and/or using the substring search at the bottom of the page. Once found, simply select the red removal icon in the top right corner of the entries cell (on the right of the blue pencil icon). This will prompt a pop-up to appear requesting your approval of the testimonials removal. Selecting cancel at this stage will remove the pop-up and re-enable the list view. Selecting the confirmation button will close the pop-up whilst removing the selected testimonial from the list view. A text message will appear confirming the testimonials removal (assuming its successfully removed from the database).
\n\nAdditional information:\n\n
This user guide was last updated on the 11th April 2017, and was written by the applications author Joshua Haslett. Please report any issues (bugs/crashes etc.) to the author at haslett.j.l@gmail.com. Please direct any further questions regarding how to operate this application, to the above email address.

    </string>
</resources>