<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSeeThroughBlack"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/colorBlack"
        >
        <TextView
            android:id="@+id/confirmationDialog_Title_TextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/colorWhite"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/confirmationDialog_Description_TextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/confirmationDialog_Title_TextView"
            />



        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/confirmationDialog_Description_TextView"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            >

            <Button
                android:id="@+id/confirmationDialog_Cancel_Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:background="@color/colorLightRed"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/confirmationDialog_Confirm_Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_weight="1"
                android:background="@color/colorAddGreen"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>