<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSeeThroughBlack"
    >

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/colorBlack"
        >
        <TextView
            android:id="@+id/testimonialDialog_Title_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_testimonial"
            android:textColor="@color/colorWhite"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/testimonialDialog_ClientName_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/search_edit_text_container"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_below="@id/testimonialDialog_Title_TextView"
            android:hint="@string/client_name"
            android:textColorHint="@color/colorGrey"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:maxLines="1"
            android:singleLine="true"
            android:maxLength="30"
            android:paddingBottom="5dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/testimonialDialog_Quote_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="@color/colorBlack"
            android:background="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_below="@id/testimonialDialog_ClientName_EditText"
            android:hint="@string/client_quote"
            android:textColorHint="@color/colorGrey"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:maxLines="10"
            android:maxLength="300"
            android:paddingBottom="5dp"
            android:layout_marginBottom="10dp"
            android:lines="3"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/testimonialDialog_Quote_EditText"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            >

            <Button
                android:id="@+id/testimonialDialog_Cancel_Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:background="@color/colorLightRed"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/testimonialDialog_Add_Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_weight="1"
                android:background="@color/colorAddGreen"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>