<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSeeThroughBlack"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:background="@color/colorBlack"
        >
        <TextView
            android:id="@+id/guideDialog_Title_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_guide"
            android:textColor="@color/colorWhite"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:fillViewport="true"
            android:layout_below="@id/guideDialog_Title_TextView"
            android:layout_above="@+id/info_close_container"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
        <TextView
            android:id="@+id/guideDialog_Description_TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/guide_description"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            />
        </ScrollView>



        <LinearLayout
            android:id="@id/info_close_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            >

            <Button
                android:id="@+id/guideDialog_Confirm_Button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
              />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>